refactor testing process